--- a/templates/original.html
+++ b/templates/original.html
@@ -12,15 +12,10 @@
 
       <div class="leaflet-control-container">
         <div class="leaflet-top leaflet-right">
-            <div id="overpass-api-controls" class="leaflet-bar leaflet-control">
-                asdsadf
-                <BR>
-                <button id="query-button" type="button" name="button" onclick="run();" value="RUN">RUN</input>
-            </div>
-          <!-- <div id="overpass-api-controls" class="leaflet-bar leaflet-control">
+          <div id="overpass-api-controls" class="leaflet-bar leaflet-control">
             <input id="query-textfield" value="leisure=playground" size="50">
             <input id="query-button" type="button" value="Laden">
-          </div> -->
+          </div>
         </div>
       </div>
 
@@ -29,7 +24,11 @@
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://unpkg.com/osmtogeojson@2.2.12/osmtogeojson.js"></script>
-    <script src="/static/index.js"></script>
+    <script src="/static/original.js"></script>
 
+    <script>
+
+
+    </script>
   </body>
 </html>
