--- a/templates/index.html
+++ b/templates/index.html
@@ -10,25 +10,25 @@
   </head>
   <body>
     <div id="map">
-      <div class="leaflet-control-container">
-          <div class="leaflet-top leaflet-right">
-              <div id="mySidenav" class="sidenav">
-                  <a href="#">About</a>
-                  <a href="#">Services</a>
-                  <a href="#">Clients</a>
-                  <a href="#">Contact</a>
-              </div>
-              <div id="overpass-api-controls" class="leaflet-bar leaflet-control">
-                  asdsadf
-                  <BR>
-                  <button id="query-button" type="button" name="button" onclick="toggleNav()" value="Stay">Filters</button>
-              </div>
-              <!-- <div id="overpass-api-controls" class="leaflet-bar leaflet-control">
-      <input id="query-textfield" value="leisure=playground" size="50">
-      <input id="query-button" type="button" value="Laden">
-    </div> -->
-          </div>
-      </div>
+        <div class="leaflet-control-container">
+            <div class="leaflet-top leaflet-right">
+                <div id="overpass-api-controls" class="leaflet-bar leaflet-control collapsable-menu">
+
+                    <div id="list1" class="collapsable-menu" tabindex="100">
+                        <span class="anchor">Select Fruits</span>
+                        <ul class="items">
+                            <li><input type="checkbox" />Apple </li>
+                            <li><input type="checkbox" />Orange</li>
+                            <li><input type="checkbox" />Grapes </li>
+                            <li><input type="checkbox" />Berry </li>
+                            <li><input type="checkbox" />Mango </li>
+                            <li><input type="checkbox" />Banana </li>
+                            <li><input type="checkbox" />Tomato</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </div>
 
