--- a/templates/index.html
+++ b/templates/index.html
@@ -12,20 +12,10 @@
     <div id="map">
         <div class="leaflet-control-container">
             <div class="leaflet-top leaflet-right">
-                <div id="overpass-api-controls" class="leaflet-bar leaflet-control collapsable-menu">
-
-                    <div id="list1" class="collapsable-menu" tabindex="100">
-                        <span class="anchor">Select Fruits</span>
-                        <ul class="items">
-                            <li><input type="checkbox" />Apple </li>
-                            <li><input type="checkbox" />Orange</li>
-                            <li><input type="checkbox" />Grapes </li>
-                            <li><input type="checkbox" />Berry </li>
-                            <li><input type="checkbox" />Mango </li>
-                            <li><input type="checkbox" />Banana </li>
-                            <li><input type="checkbox" />Tomato</li>
-                        </ul>
-                    </div>
+                <div id="overpass-api-controls" class="leaflet-bar leaflet-control collapsable-menu" tabindex="100">
+                    <span class="anchor">Select Place</span>
+                    <ul id="items">
+                    </ul>
                 </div>
             </div>
         </div>
