--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,8 @@
 ﻿<!DOCTYPE html>
 <html>
   <head>
-    <title>Example: Overpass-API with Leaflet.js</title>
+    <title>Maptivity</title>
+    <!-- <link rel="icon" href="/static/favicon.ico" type="image/vnd.microsoft.icon"> -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
