run query with filter

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,9 @@
                 <div id="overpass-api-controls" class="leaflet-bar leaflet-control collapsable-menu" tabindex="100">
                     <span class="anchor">Select Place</span>
                     <ul id="items">
+                        <button id="query-button" onclick="run();">Filter</button>
+                        <button id="query-button" onclick="();">Check All</button>
+                        <button id="query-button" onclick="();">Uncheck ALL</button>
                     </ul>
                 </div>
             </div>
