block during query

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,9 +16,9 @@
                 <div id="overpass-api-controls" class="leaflet-bar leaflet-control collapsable-menu" tabindex="100">
                     <span class="anchor">Select Place</span>
                     <ul id="items">
-                        <button id="query-button" onclick="run();">Filter</button>
-                        <button id="query-button" onclick="checkAllBoxes();">Check All</button>
-                        <button id="query-button" onclick="uncheckAllBoxes();">Uncheck ALL</button>
+                        <button id="query-button-filter"  class="query-button" onclick="run();">            Filter</button>
+                        <button id="query-button-check"   class="query-button" onclick="checkAllBoxes();">  Check All</button>
+                        <button id="query-button-uncheck" class="query-button" onclick="uncheckAllBoxes();">Uncheck ALL</button>
                     </ul>
                 </div>
             </div>
